update 212 fruitbox jumping issue fix - mobile update

--- a/html/style.css
+++ b/html/style.css
@@ -192,7 +192,6 @@ img {
   background-position: center;
   background-repeat: no-repeat;
   justify-content: center;
-  background-image: url('https://i.gifer.com/ZhkE.gif');
 }
 /*lines inside gray boxes */
 .fruit-boxes img {
@@ -301,7 +300,11 @@ img {
     
   #container {
     margin: auto;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     border: 15px ridge whitesmoke;
+    background-image: url(https://media2.giphy.com/media/gw3woz6oWXK48iE8/source.gif);
   }
     
   #kids {
@@ -315,6 +318,10 @@ img {
     padding: 0em 0.1em 0em 0.1em;
     color: lightseagreen;
     border: none;
+  }
+    
+  #fruit-images {
+    display: none;
   }
     
   #nav-container {
@@ -398,14 +405,11 @@ img {
   }
  
   #groceries {
+    width: 40%;
     display: inline;
     visibility: visible;
     margin-bottom: -80px;
   }  
-
-  img {
-    width: 43%;
-  }
     
   #guess {
     margin: 0px;
@@ -434,13 +438,13 @@ img {
     
     /*container */
   .fruit-boxes {
+    display: none;
     width: 90%;
     padding: 0px;
     margin: auto;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    background-image: url('https://i.gifer.com/ZhkE.gif');
     }
     
   /*lines inside gray boxes */
